--- a/_config/config.yml
+++ b/_config/config.yml
@@ -13,7 +13,7 @@ Signify\Extensions\SecurityHeaderControllerExtension:
     X-XSS-Protection: "1; mode=block"
     X-Content-Type-Options: "nosniff"
     Referrer-Policy: no-referrer
-    Content-Security-Policy: >
+    Content-Security-Policy: >-
       default-src 'self';
       script-src 'self' 'unsafe-inline' 'unsafe-eval';
       style-src 'self' 'unsafe-inline';
