feat: Add the report_uri to the default configuration.
This way developers don't need to set it unless they want to change the endpoint.

--- a/_config/config.yml
+++ b/_config/config.yml
@@ -7,6 +7,7 @@ SilverStripe\Control\Controller:
     - Signify\Extensions\SecurityHeaderControllerExtension
 
 Signify\Extensions\SecurityHeaderControllerExtension:
+  report_uri: 'cspviolations/report'
   headers:
     Strict-Transport-Security: "max-age=31536000"
     X-Frame-Options: "deny"
