--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "issues": "https://github.com/signify-nz/silverstripe-security-headers/issues"
     },
     "require": {
-        "silverstripe/framework": "^4.0"
+        "silverstripe/framework": "^4.0",
+        "silverstripe/cms": "^4.0"
     },
     "autoload": {
         "psr-4": {
