--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,10 @@
         "silverstripe/framework": "^4.0",
         "silverstripe/cms": "^4.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^5.7",
+        "squizlabs/php_codesniffer": "^3.0"
+    },
     "autoload": {
         "psr-4": {
             "Signify\\": "src/"
