--- a/_config/routes.yml
+++ b/_config/routes.yml
@@ -3,4 +3,4 @@ Name: signify-security-header-routes
 ---
 SilverStripe\Control\Director:
   rules:
-    'cspviolations/report': 'Signify\SecurityHeaders\Controllers\CSPViolationsController'
+    'cspviolations/report': 'Signify\Controllers\CSPViolationsController'
