--- a/_config/config.yml
+++ b/_config/config.yml
@@ -2,7 +2,7 @@
 Name: signify-security-headers
 After: 'coreconfig'
 ---
-Signify\Extensions\SecurityHeaderControllerExtension:
+Signify\Middleware\SecurityHeaderMiddleware:
   headers:
     Strict-Transport-Security: "max-age=31536000"
     X-Frame-Options: "SAMEORIGIN"
@@ -24,7 +24,7 @@ Signify\Extensions\SecurityHeaderControllerExtension:
 Only:
   environment: dev
 ---
-Signify\Extensions\SecurityHeaderControllerExtension:
+Signify\Middleware\SecurityHeaderMiddleware:
   headers:
     # 5 minutes in dev.
     Strict-Transport-Security: "max-age=300"
@@ -32,7 +32,7 @@ Signify\Extensions\SecurityHeaderControllerExtension:
 Only:
   environment: test
 ---
-Signify\Extensions\SecurityHeaderControllerExtension:
+Signify\Middleware\SecurityHeaderMiddleware:
   headers:
     # 1 hour in test.
     Strict-Transport-Security: "max-age=3600"
