--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
   "name": "signify-nz/silverstripe-security-headers",
+  "description": "Adds configurable security headers to HTTP responses via middleware.",
   "type": "silverstripe-vendormodule",
   "license": "BSD-3-Clause",
   "authors": [
