--- a/_config/config.yml
+++ b/_config/config.yml
@@ -2,6 +2,12 @@
 Name: signify-security-headers
 After: 'coreconfig'
 ---
+SilverStripe\Core\Injector\Injector:
+  SilverStripe\Control\Director:
+    properties:
+      Middlewares:
+        SecurityHeaderMiddleware: '%$Signify\Middleware\SecurityHeaderMiddleware'
+
 Signify\Middleware\SecurityHeaderMiddleware:
   headers:
     Strict-Transport-Security: "max-age=31536000"
