--- a/_config/config.yml
+++ b/_config/config.yml
@@ -2,7 +2,13 @@
 Name: signify-security-headers
 After: 'coreconfig'
 ---
-SecurityHeaderControllerExtension:
+Injector:
+  RequestProcessor:
+    properties:
+      filters:
+        - '%$SecurityHeaderRequestFilter'
+
+SecurityHeaderRequestFilter:
   headers:
     Strict-Transport-Security: "max-age=31536000"
     X-Frame-Options: "SAMEORIGIN"
@@ -24,7 +30,7 @@ SecurityHeaderControllerExtension:
 Only:
   environment: dev
 ---
-SecurityHeaderControllerExtension:
+SecurityHeaderRequestFilter:
   headers:
     # 5 minutes in dev.
     Strict-Transport-Security: "max-age=300"
@@ -32,7 +38,7 @@ SecurityHeaderControllerExtension:
 Only:
   environment: test
 ---
-SecurityHeaderControllerExtension:
+SecurityHeaderRequestFilter:
   headers:
     # 1 hour in test.
     Strict-Transport-Security: "max-age=3600"
