chore: Update composer.json with package install name.
The directory created for this module will be "security headers", ommitting the "silverstripe" part of the module name.

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     "unclecheese/display-logic": "Provides functionality to hide fields that shouldn't used for filtering."
   },
   "extra": {
+    "installer-name": "security-headers",
     "expose": [
       "client/dist"
     ]
