chore: Update composer.json to comply with SS4 module standards.

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,14 @@
 {
   "name": "signify-nz/silverstripe-security-headers",
   "description": "Adds configurable security headers to HTTP responses via middleware.",
+  "homepage": "https://github.com/signify-nz/silverstripe-security-headers",
+  "keywords": [
+    "silverstripe",
+    "security",
+    "headers",
+    "report",
+    "CSP"
+  ],
   "type": "silverstripe-vendormodule",
   "license": "BSD-3-Clause",
   "authors": [
@@ -13,6 +21,7 @@
     "issues": "https://github.com/signify-nz/silverstripe-security-headers/issues"
   },
   "require": {
+    "silverstripe/vendor-plugin": "^1.0",
     "silverstripe/framework": "^4.0",
     "silverstripe/cms": "^4.0"
   },
