--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     "squizlabs/php_codesniffer": "^3.0"
   },
   "suggest": {
-    "unclecheese/display-logic": "Provides functionality to hide fields that shouldn't used for filtering."
+    "unclecheese/display-logic": "Provides functionality to hide filter fields that aren't active."
   },
   "extra": {
     "installer-name": "security-headers",
