--- a/.travis.yml
+++ b/.travis.yml
@@ -13,14 +13,8 @@ env:
 matrix:
   include:
     - php: 7.1
-      env: DB=PGSQL PHPCS_TEST=1 PHPUNIT_TEST=1
+      env: DB=PGSQL PHPUNIT_TEST=1 PHPCS_TEST=1 PHPCS_TEST=1
     - php: 7.1
-      env: DB=MYSQL PHPUNIT_TEST=1
-    - php: 7.2
-      env: DB=MYSQL PHPUNIT_TEST=1
-    - php: 7.3
-      env: DB=MYSQL PHPUNIT_TEST=1
-    - php: 7.4
       env: DB=MYSQL PHPUNIT_TEST=1 PHPUNIT_COVERAGE_TEST=1
 
 before_script:
