--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     "silverstripe/cms": "^4.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.7",
+    "phpunit/phpunit": "^9.5",
+    "silverstripe/framework": "^4.10",
     "squizlabs/php_codesniffer": "^3.0"
   },
   "suggest": {
