--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -4,6 +4,9 @@ checks:
 build:
     nodes:
         analysis:
+            environment:
+                php:
+                    version: 8.0
             tests:
                 override: [php-scrutinizer-run]
 
