--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
-    "silverstripe/framework": "^4.10",
+    "silverstripe/framework": "^4.10 || ^5.0",
     "squizlabs/php_codesniffer": "^3.0"
   },
   "suggest": {
